@@ -1,18 +1,19 @@
 package fuzs.plentyplates.world.level.block.entity.data;
 
 import com.mojang.authlib.GameProfile;
-import fuzs.puzzleslib.api.core.v1.CommonAbstractions;
+import fuzs.puzzleslib.impl.core.proxy.ProxyImpl;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.nbt.NbtOps;
 import net.minecraft.nbt.Tag;
+import net.minecraft.util.ExtraCodecs;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.player.Player;
-import org.apache.commons.lang3.StringUtils;
 import org.jetbrains.annotations.Nullable;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.UUID;
 import java.util.function.Predicate;
 
 public class PlayerDataProvider implements DataProvider<GameProfile> {
@@ -20,7 +21,10 @@ public class PlayerDataProvider implements DataProvider<GameProfile> {
     @Nullable
     @Override
     public GameProfile fromString(String value, HolderLookup.Provider registries) {
-        return Optional.of(value).filter(Predicate.not(String::isEmpty)).flatMap(CommonAbstractions.INSTANCE.getMinecraftServer().getProfileCache()::get).orElse(null);
+        return Optional.of(value)
+                .filter(Predicate.not(String::isEmpty))
+                .flatMap(ProxyImpl.get().getMinecraftServer().getProfileCache()::get)
+                .orElse(null);
     }
 
     @Override
@@ -30,38 +34,23 @@ public class PlayerDataProvider implements DataProvider<GameProfile> {
 
     @Override
     public List<? extends GameProfile> getAllValues(HolderLookup.Provider registries) {
-        return List.of();
+        return Collections.emptyList();
     }
 
     @Override
     public GameProfile fromTag(Tag tag, HolderLookup.Provider registries) {
-        if (tag.getId() == Tag.TAG_COMPOUND) {
-            CompoundTag compoundTag = (CompoundTag) tag;
-            UUID uuid = null;
-            if (compoundTag.contains("UUID", Tag.TAG_INT_ARRAY)) {
-                uuid = compoundTag.getUUID("UUID");
-            }
-            String name = "";
-            if (compoundTag.contains("Name", Tag.TAG_STRING)) {
-                name = compoundTag.getString("Name");
-            }
-            if (uuid != null || !name.isEmpty()) {
-                return new GameProfile(uuid, name);
-            }
-        }
-        return null;
+        return ExtraCodecs.GAME_PROFILE_WITHOUT_PROPERTIES.codec()
+                .parse(registries.createSerializationContext(NbtOps.INSTANCE), tag)
+                .resultOrPartial()
+                .orElse(null);
     }
 
     @Override
     public Tag toTag(GameProfile value, HolderLookup.Provider registries) {
-        CompoundTag tag = new CompoundTag();
-        if (value.getId() != null) {
-            tag.putUUID("UUID", value.getId());
-        }
-        if (StringUtils.isNotBlank(value.getName())) {
-            tag.putString("Name", value.getName());
-        }
-        return tag;
+        return ExtraCodecs.GAME_PROFILE_WITHOUT_PROPERTIES.codec()
+                .encodeStart(registries.createSerializationContext(NbtOps.INSTANCE), value)
+                .resultOrPartial()
+                .orElseGet(CompoundTag::new);
     }
 
     @Override
